--- a/style.css
+++ b/style.css
@@ -232,4 +232,11 @@ footer {
 }
 
 
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
  
